# rs_shield

./: .gitignore  .markdown-lint.json  Cargo.toml  README.md  SECURITY.md  build_release.sh  deny.toml  example-secure-config.toml  filme.toml  run-desktop.sh  setup-secure-credentials.sh
.github/: dependabot.yml
.github/workflows/: benchmark.yml  coverage.yml  docs.yml  lint.yml  msrv.yml  pr-checks.yml  release.yml  security.yml  test.yml
docs/: CLI.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
rsb-cli/: CLI_GUIDE.md  Cargo.toml  README.md
rsb-cli/src/: main.rs
rsb-core/: Cargo.toml  README.md  meu-backup.toml
rsb-core/src/: lib.rs  main.rs  realtime.rs  report.rs  s3_check.rs
rsb-core/src/config/: mod.rs
rsb-core/src/core/: backup.rs  cancellation.rs  chat_integrations.rs  email_notifications.rs  file_processor.rs  manifest.rs  mod.rs  notification_history.rs  notification_logger.rs  prune.rs  resource_monitor.rs  restore.rs  storage_backend.rs  types.rs  verify.rs
rsb-core/src/credentials/: credentials_manager.rs  encryption.rs  mod.rs  secure_string.rs  web_authn.rs
rsb-core/src/crypto/: mod.rs
rsb-core/src/storage/: mod.rs
rsb-core/src/utils/: mod.rs
rsb-core/tests/: config_tests.rs  core_manifest_tests.rs  core_operations_tests.rs  core_prune_tests.rs  core_resource_monitor_tests.rs  core_storage_backend_tests.rs  crypto_tests.rs  expand_path_tests.rs  integration_notifications_tests.rs  integration_tests.rs  realtime_tests.rs  report_tests.rs  utils_tests.rs
rsb-desktop/: Cargo.toml  DESIGN_GUIDE.md  README.md
rsb-desktop/src/: main.rs
rsb-desktop/src/ui/: app.rs  app_preferences.rs  backup_screen.rs  config_screen.rs  create_profile_screen.rs  i18n.rs  integrations_screen.rs  metrics.rs  mod.rs  operations.rs  operations_helpers.rs  profile_loader.rs  profile_manager_screen.rs  prune_screen.rs  realtime_sync_screen.rs  restore_screen.rs  s3_tester.rs  schedule_screen.rs  shared.rs  verify_screen.rs
tests/: config_tests.rs  core_operations_tests.rs  core_types_tests.rs  integration_tests.rs  realtime_tests.rs
