[package]
name = "rsb-cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rsb-core = { path = "../rsb-core", features = ["cli"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
walkdir = "2"
keyring = "3.6.3"
atty = "0.2.14"
rpassword = "7.4.0"
reqwest = "0.13.1"
