[package]
name = "rsb-cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rsb-core = { path = "../rsb-core", features = ["cli"] }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
keyring = { workspace = true }
atty = { workspace = true }
rpassword = { workspace = true }
reqwest = { workspace = true }
