[package]
name = "rsb-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true }
ring = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
maud = { workspace = true }
sysinfo = { workspace = true }
notify = { workspace = true }
aws-credential-types = { workspace = true }
lettre = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
zeroize = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
dirs = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
rpassword = { workspace = true }
battery = { workspace = true }
webauthn-rs = { workspace = true }
soft-fido2 = { workspace = true }
[features]
# CLI feature enables interactive credential prompting
cli = []

[dev-dependencies]
tempfile = "3.8"

