[package]
name = "rsb-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["desktop", "router"] }
dioxus-desktop = "0.7"
rsb-core = { path = "../rsb-core" }   # link para o teu core
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rfd = "0.14"
chrono = "0.4"
open = "5.0"
dirs = "5.0"
sysinfo = "0.30"
toml = "1.0"
walkdir = "2.4"
notify-rust = "4.11"
regex = "1"
battery = "0.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }